Fixed hiddenDropdown's aligning problem. Now, NavLinks are wrapped with ul li structures. Deleted position: relative from Nav. Changed hiddenNavbar's top and right values.

--- a/client/src/components/HomepageNavbar/style.css
+++ b/client/src/components/HomepageNavbar/style.css
@@ -17,13 +17,13 @@
 }
 
 .positionForOrnekVideolar {
-    top: 2.6rem;
-    left: 20rem;
+    top: 2rem;
+    right: 0;
 }
 
 .positionForBizeUlasin {
-    top: 2.6rem;
-    right: 11rem;
+    top: 1.6rem;
+    right: -1rem;
 }
 
 /* header sub menu arrow */
